Release Notes:
==============
JSIDPlay2:
Bugfix: Prevent JSIDPlay2 to hang and scan whole directory tree, if called with a SID as command line argument